change github url

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/Drongo-J/ReactPropsTask",
+  "homepage": "https://drongo-j.github.io/ReactPropsTask",
   "name": "task2",
   "version": "0.1.0",
   "private": true,
